# nblex

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  LICENSE.html  Makefile.am  NEWS  PCAP-BLOCKING-FIX.md  PLAN.md  README.md  REVIEW.md  SPEC.md  TEST-RESULTS.md  configure.ac  nblex.pc.in  review-claude-2025-11-08.md
.claude/: settings.local.json
cli/: main.c
docs/: API.md  README.md  USER_GUIDE.md  competitive-analysis.md  derived-event-schema.md  index.html  nql-spec.md  review-claude-2025-11-08.md  strategy.md
examples/: CMakeLists.txt  simple.c
include/nblex/: nblex.h  version.h.in
scripts/: README.md
src/: .gitignore  Makefile.am  nblex.c  nblex.h.in  nblex_core.c  nblex_internal.h  nblex_lex.c  nblex_unicode.c
src/core/: config.c  filter_engine.c  nblex_event.c  nblex_world.c  nql_executor.c
src/correlation/: time_correlation.c
src/input/: file_input.c  input_base.c  pcap_input.c
src/output/: file_output.c  http_output.c  json_output.c  metrics_output.c
src/parsers/: dns_parser.c  http_parser.c  json_parser.c  logfmt_parser.c  nginx_parser.c  nql_parser.c  nql_parser.h  regex_parser.c  syslog_parser.c
src/util/: buffer.c  memory.c
tests/: CMakeLists.txt  test_config.c  test_correlation.c  test_file_input.c  test_filters.c  test_helpers.c  test_helpers.h  test_integration_config.c  test_integration_correlation.c  test_integration_e2e.c  test_integration_file.c  test_integration_helpers.c  test_integration_helpers.h  test_integration_output.c  test_integration_output_formatters.c  test_integration_pipeline.c  test_integration_resource_limits.c  test_metrics_output.c  test_nql.c  test_nql_execute.c  test_nql_parse.c  test_nql_schema.c  test_nql_windows.c  test_parsers.c  test_pcap_nonblocking.c  test_world.c  verify_pcap_syntax.sh
tests/data/: README.md
